--- a/README.adoc
+++ b/README.adoc
@@ -37,6 +37,39 @@ erlang which make this possible:
   the encoded name, we then parse the binary with
   `:erlang.bytes_to_term(node_name)` and simply `Node.connect/1` to the result!
 
+== Run It
+
+Suppose you have two computers on the same network. On one computer:
+
+[source,bash]
+----
+podman build --tag gossip .
+podman run --net=host -e RELEASE_NAME=a gossip
+----
+
+This will begin running the GossipCluster application from a podman container.
+On the other computer (note the different release name):
+
+[source,bash]
+----
+podman build --tag gossip .
+podman run --het=host -e RELEASE_NAME=b gossip
+----
+
+You should see a NODEUP messages within a few seconds on both computers as they
+locate one another over multicast. Failure to assign each node a different
+`RELEASE_NAME` may result in an error like
+`** Cannot get connection id for node name@host`.
+
+If you do not want to fiddle with podman (or docker) and have elixir installed,
+you can run this on both computers (setting the value of `--sname` differently
+for each computer):
+
+[source,bash]
+----
+iex --sname a --cookie cookie -S mix
+----
+
 [bibliography]
 == References
 - [[[libcluster, 1]]] https://github.com/bitwalker/libcluster
