Fix link to Minishift reference
A section was titled "minishift," which competed with the bibliography entry for the link. We've re-named the title, so the bibliography entry should resolve correctly now.

--- a/README.adoc
+++ b/README.adoc
@@ -52,7 +52,7 @@ minishift, which allows two or more pods to communicate on the same multicast
 socket. Another, of course, is to start another laptop. Instructions for both
 methods follow.
 
-=== Minishift
+=== Using Minishift
 
 If you have minishift <<minishift>> installed, the following commands are
 sufficient to start two pods gossipping over multicast:
@@ -85,7 +85,7 @@ $ oc logs -f gossip-1-6msjw
 ...
 ----
 
-=== Two Computers
+=== Using Two Computers
 
 ==== Podman or Docker
 
